[package]
edition = "2018"
name = "ledger"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "ledger"

[dependencies]
serde = "1"
derive_more = "0"
chrono = {version = "0.4", features = ["serde"]}

hdk = { version = "0.0.124", features = ["encoding"] }
holo_hash = { version = "0.0.21", features = ["encoding"] }
